--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://shqln.github.io/algo-vis",
-  "name": "algo",
+  "name": "algo-vis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
